test/fixtures/basic/app/pages/invalid-root/1.vue
<template>
  <!-- comment -->
  <div>Test</div>
</template>
